--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ springdoc.api-docs.path=/api-docs
 #DataSource: infos de connection
 # REST DOC http://localhost:8080/swagger-ui/index.html #/
 # jdbc:mariadb://192.168.33.10:3306/quizify #/
-spring.datasource.url=jdbc:mariadb://localhost:3306/quizify
+spring.datasource.url=jdbc:mariadb://192.168.33.10:3306/quizify
 spring.datasource.username=root
 spring.datasource.password=mariadb
 spring.jpa.hibernate.ddl-auto=update
